fix(App) 🐛 header layout z-index

--- a/app/components/header/header-desktop/product-menu/product-menu.module.css
+++ b/app/components/header/header-desktop/product-menu/product-menu.module.css
@@ -6,7 +6,7 @@
     padding-bottom: 48px;
     box-shadow: 0px 4px 16px 0px #1E1E1E14;
     backdrop-filter: blur(30px);
-    z-index: 2;
+    z-index: 3;
     display: flex;
 }
 
