--- a/app/components/header/header-mobile/header-mobile.module.css
+++ b/app/components/header/header-mobile/header-mobile.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 3;
+    z-index: 4;
     padding: 16px 16px 0 16px;
 }
 
